--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "develop": "webpack --watch",
-    "prod": "npm install && npm webpack -p",
+    "prod": "npm install && npm webpack --mode production",
     "format": "prettier --write \"src/**/*.{tsx,ts,sccs}\""
   },
   "dependencies": {
